--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     />
 
     <link rel="stylesheet" href="./css/styles.css" />
+
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
